# osgar

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  camera.py  can.html  can.py  canproxy.py  column.py  compare_rotations.py  demo-wall.py  demo.py  demo2.py  demo_wall.py  driver.py  drivers.html  eduro.html  followme.py  genindex.html  glossary.html  gps.py  helper.py  howto.html  index.html  johndeer.py  johndeere.py  laser.py  launcher.py  logging.html  modules.html  msgtypes.html  navpat.py  objects.inv  orchard.py  (+25 more)
.doctrees/: can.doctree  drivers.doctree  eduro.doctree  environment.pickle  glossary.doctree  index.doctree  logging.doctree  msgtypes.doctree  rosproxy.doctree  tutorial.doctree
.github/workflows/: docs-deploy.yaml  python-ci.yaml
_deprecated/: camera.py  can.py  column.py  conda-linux.yml  conda-win32.yml  demo2.py  driver.py  helloworld.py  johndeere.py  laser.py  remote.py  velodyne.py
_deprecated/apyros/: manual.py  sourcelogger.py
_deprecated/config/: mapit.json
_deprecated/lib/: processor.py
_deprecated/s60/: md_ball.py
_deprecated/subt/: apriltag.py  artf_detector.py  artf_edgetpu_detector.py  artf_model.py  artf_reporter.py  artifacts.py  breadcrumbs.py  depth2scan.py  dummy_darpa_server.py  gazebo_poses.py  ign.proto  ign_pb2.py  ign_poses.py  launch.py  marsupial.py  multitrace.py  mytimer.py  name_decoder.py  octomap.json  octomap.py  points2scan.py  rosbag2log.py  roslaunch.py  scan_mixer.py  subt-k2-virt.json  teambase.py  test_artf_filter.py  test_artf_reporter.py  test_breadcrumbs.py  test_depth2scan.py  test_drone.py  test_dummy_darpa_server.py  test_image_extractor.py  test_launch.py  test_marsupial.py  test_name_decoder.py  test_scan_mixer.py  test_wifisignal.py  trace.py  twistwrap.py  (+1 more)
_deprecated/subt/ros/proxy/: CMakeLists.txt  pull.py  ros_proxy_node.cc  ros_proxy_teambase.cc  traversability.cc
_deprecated/subt/ros/proxy/launch/: sim.launch  teambase.launch
_deprecated/subt_graveyard/: r2.json  r2.launch
_deprecated/tools/: plot.py  rosbag.py  viewer.py
_deprecated/webserver/: README.md  lights.html
_sources/: drivers.rst.txt  eduro.rst.txt  glossary.rst.txt  howto.rst.txt  index.rst.txt  modules.rst.txt  msgtypes.rst.txt  osgar.drivers.rst.txt  osgar.lib.rst.txt  osgar.rst.txt  rosproxy.rst.txt
apyros/: metalog.py  metaopen.py  sourcelogger.py  test_metalog.py
config/: bare-skiddy.json  bt-scanner.json  cortexpilot-no-camera.json  cortexpilot-only.json  cortexpilot-subt-estop.json  cortexpilot-subt.json  cortexpilot.json  deedee-demo.json  deedee-subt.json  dual-pozyx.json  dual-qorvo.json  eduro-followme-dual-uwb.json  eduro-followme-uwb.json  eduro-followme-vanjee.json  eduro-followme.json  eduro-followpath.json  eduro-go-vanjee.json  eduro-go.json  eduro-ro2019-lord.json  eduro-ro2019.json  eduro-sick2018.json  eduro-subt-estop-lora-wifi-jetson.json  eduro-subt-estop-lora-wifi.json  eduro-subt-estop-lora.json  eduro-subt-estop.json  eduro-subt-slots.json  eduro-subt.json  eduro-two-lidars.json  eduro-with-camera.json  eduro.json  explore-left-wall.json  explore-right-wall.json  fill-pattern-15x5.json  fr07-followpath.json  fr07-go.json  gps-mpfc-linux.json  gps-pozyx.json  jetson-node-k2-front.json  jetson-node-k2-rear.json  kloubak-slot.json  (+121 more)
doc/: deep_dive.md
drivers/: __init__.py  bus.py  gps.py  imu.py  logserial.py  spider.py  test_bus.py  test_gps.py  test_imu.py  test_logserial.py  test_spider.py
examples/: README.md  robotour.py  test_robotours.py
lib/: camera_marks.py  config.py  landmarks.py  localization.py  logger.py  processor.py  test_config.py  test_landmarks.py  test_localization.py  test_logger.py
moon/: angle_filter.py  artifacts.py  bulk_test.sh  controller.py  controller_excavator_round2.py  controller_hauler_round2.py  controller_round1.py  controller_round3.py  hauler.py  howto.md  light_manager.py  main.py  monitors.py  moon-view.bat  moon-view.sh  moonnode.py  motorpid.py  odometry.py  rospy_rover.py  rover.py  scout.py  scout1.json  skyline.py  test_angle_filter.py  test_artifacts.py  test_controller.py  test_controller_excavator_round2.py  test_controller_round1.py  test_controller_round3.py  test_main.py  test_monitors.py  test_motorpid.py  test_odometry.py  test_skyline.py  test_zmqpool.py  zmqpool.py
osgar/: __init__.py  boat.py  bus.py  compass_calib.py  exceptions.py  explore.py  followme.py  followme_uwb.py  followpath.py  go.py  go1m.py  gpsnav.py  launcher.py  logger.py  node.py  obstdet3d.py  osgar_sim.py  record.py  replay.py  ro2018.py  robot.py  sick2018.py  terminator.py  test_bus.py  test_explore.py  test_followme.py  test_followpath.py  test_go.py  test_logger.py  test_node.py  test_record.py  test_replay.py  test_ro2018.py  test_terminator.py  test_version.py  test_zmqrouter.py  turn.py  zmqrouter.py
osgar/lib/: icp.py  (+44 more)
s60/: ball.py  md_ball.py
subt/: apriltag.py  artf_detector.py  artf_edgetpu_detector.py  artf_filter.py  artf_gas.py  artf_model.py  artf_node.py  artf_reporter.py  artf_utils.py  artifacts.py  augmented_scan.py  aws2info.py  aws2log.py  bluetooth_signal.py  breadcrumbs.py  bundle_rgbd.py  check_gas.py  check_phone.py  cloudsim2osgar.py  control_center.json  control_center.py  control_center_qt.py  crash_report.py  depth2scan.py  depth_edges.py  drone.py  estop.py  follower.py  ign.proto  ign_pb2.py  ign_poses.py  image_extractor.py  jetson_artf_node.py  launch.py  local_planner.py  main.py  mapping_server.py  marsupial.py  monitors.py  multitrace.py  (+77 more)
subt/ros/proxy/: CMakeLists.txt  artifact_type_from_string.cc  depth_filter.cc  flyability.cc  package.xml  pose_from_artifact_origin.cc  pull.py  push.py  ros_proxy_node.cc  ros_proxy_teambase.cc  sendlog.py  traversability.cc  wait.py
subt/ros/proxy/launch/: drone.launch
tools/: annot.py  bin2pcap.py  filtration_select.py  log2video.py  logparser.py  logparser2.py  meta2view.py  parse_laserraw.py  play.py  plot.py  throttle_view.py  viewer.py  zip2mkv.py  zipit.py
webserver/: controller.py  web2.py
(+654 files in other folders)
