<?xml version="1.0"?>
<package format="2">
  <name>proxy</name>
  <version>0.0.0</version>
  <description>Proxies between osgar and ros</description>

  <maintainer email="zbynek@todo.todo">zbynek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>subt_communication_broker</depend>
  <depend>subt_ign</depend>

  <depend>std_msgs</depend>
  <depend>subt_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

</package>
